--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
 
     <title>Generate Joke</title>
+
+    
 </head>
-<body>
-    <div class="card" style="width: 20rem; margin: auto;">
+<body background="./Sign in.gif">
+    <div class="card" style="width: 20rem; margin: auto; margin-top: 20%;">
         <div class="card-header">
             Random Joke
         </div>
